# openai_agents

./: .gitignore  README.md  main.py  params.yaml  pyproject.toml  requirements.txt  schema.yaml  template.py
resources/: analysis.txt  medical_report.md
resources/report_reader/: ref_test_report.json  test_report.json
src/aropenai_agents/agents/: pathology_agent.py
src/aropenai_agents/components/: pathology_agent.py  report_generator.py  report_reader.py
src/aropenai_agents/constants/: __init__.py
src/aropenai_agents/pipeline/: report_pipeline.py
src/aropenai_agents/utils/: common.py
